<resources>
    <string name="app_name">ITGC Manager</string>
    <string name="connection_failed">Connection failed, please check your internet connection and try again later.</string>
    <string name="connection_timeout">The server is taking too long to respond, please try again later.</string>
    <string name="login_failed">Username or Password invalid.</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="reset_password_form_email_hint">Email</string>
    <string name="reset_password_form_button">Reset password</string>
    <string name="reset_password_email_not_found">Email not found in our servers</string>
    <string name="reset_password_successful">Password reset successful, a message has been sent to your email.</string>
    <string name="title_activity_create_project">Create Project</string>
    <string name="create_project_name_hint">Project name</string>
    <string name="create_project_button_text">Create</string>
    <string name="create_project_year_coverage_hint">Year Coverage</string>
    <string name="create_project_not_available_name_message">There is a Project with the same name and coverage</string>
    <string name="action_create_project">Create Project</string>
    <string name="action_edit_project_text">Edit Project</string>
    <string name="edit_project_title">Edit Project</string>
    <string name="edit_project_button_text">Save Project</string>
    <string name="project_details_number_of_members_label">Team members: </string>
    <string name="project_details_number_of_companies_label">Companies in scope: </string>
    <string name="project_details_number_of_systems_label">Systems in scope: </string>
    <string name="project_details_number_of_controls_label">Number os Controls: </string>
    <string name="project_details_number_of_tests_label">Total of Tests: </string>
    <string name="project_details_number_of_tests_pending_label">Pending: </string>
    <string name="project_details_number_of_tests_returned_label">Returned: </string>
    <string name="project_details_number_of_tests_received_label">Received: </string>
    <string name="project_details_number_of_tests_on_progress_label">On Progress: </string>
    <string name="project_details_number_of_tests_tested_label">Tested: </string>
    <string name="project_details_number_of_tests_finished_label">Finished: </string>
    <string name="project_list_long_click_dialog_message">Edit Project XXX?</string>
    <string name="control_list_long_click_dialog_message">Edit Control XXX?</string>
    <string name="title_company_section">Company Scope</string>
    <string name="title_activity_add_company_scope">Add Company Scope</string>
    <string name="add_company_scope_name_hint">Company Name</string>
    <string name="add_company_scope_button_text">Save</string>
    <string name="add_company_duplicated_name_error">Duplicated Company Name</string>
    <string name="action_title_add_company">Add company</string>
    <string name="company_list_empty_string">You have not registered any company yet, to add one go to the "Control" section and click the button "Add Company" at the right top of the screen.</string>
    <string name="edit_company_title">Edit Company</string>
    <string name="company_list_long_click_dialog_message">Edit Company XXX?</string>
    <string name="edit_system_title">Edit System</string>
    <string name="system_list_long_click_dialog_message">Edit System XXX?</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home_section">Home</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="project_list_empty_string">You have no projects, to create one click at the button "Create project"</string>
    <string name="team_member_list_empty_string">You have no members added yet, to add one to the project, click at the button "Add Member"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="title_activity_project_dashboard">Dashboard</string>
    <string name="title_team_section">Team</string>
    <string name="add_member_search_hint">Search User by login or name</string>
    <string name="add_member_not_found_message">Your search returned no results.</string>
    <string name="confirmation_dialog_yes">YES</string>
    <string name="confirmation_dialog_no">NO</string>
    <string name="confirmation_dialog_add_member_message">Are you sure you want to add XXX at your project?</string>
    <string name="action_title_add_member">Add member</string>
    <string name="team_member_fragment_title">Team members</string>
    <string name="title_system_section">System Scope</string>
    <string name="title_activity_add_system_scope">Add System Scope</string>
    <string name="add_system_scope_name_hint">System Name</string>
    <string name="add_system_scope_button_text">Save</string>
    <string name="add_system_duplicated_name_error">Duplicated System Name</string>
    <string name="action_title_add_system">Add system</string>
    <string name="system_list_empty_string">You have not registered any system yet, to add one go to the "System" section and click the button "Add System" at the right top of the screen</string>
    <string name="selector_dialog_no_results_message">No results</string>
    <string name="add_control_tab_view_section_details_title">Details</string>
    <string name="add_control_tab_view_section_system_scope_title">System Scope</string>
    <string name="add_control_tab_view_section_company_scope_title">Company Scope</string>
    <string name="add_control_tab_view_section_responsible_title">Responsible</string>
    <string name="add_control_details_risk_classification_label">Risk Classification</string>
    <string name="add_control_details_type_label">Type</string>
    <string name="add_control_details_nature_label">Nature</string>
    <string name="add_control_details_frequency_label">Frequency</string>
    <string name="title_activity_add_control_details">Add Control: Details</string>
    <string name="add_control_user_button">Select Owner</string>
    <string name="add_control_name_hint">*Name</string>
    <string name="add_control_owner_hint">*Owner</string>
    <string name="add_control_description_hint">*Description</string>
    <string name="add_control_population_hint">*Population</string>
    <string name="add_control_error_fragment_title">Error!</string>
    <string name="add_control_error_fragment_ok_button">OK</string>
    <string name="add_control_details_error_fragment_message">The fields Risk Class, Type, Frequency and Nature are required</string>
    <string name="add_control_system_scope_error_fragment_message">The control requires a definition of system scope</string>
    <string name="add_control_company_scope_error_fragment_message">The control requires a definition of company scope</string>
    <string name="title_activity_add_control_define_scope">Add Control: Define Scope</string>
    <string name="add_control_define_scope_add_button_text">Add System Scope</string>
    <string name="add_control_define_scope_empty_list_message">You have no Scope defined, click at the button right above to define one</string>
    <string name="add_control_scope_button_text">Define scope</string>
    <string name="add_control_save_button_text">Save</string>
    <string name="add_control_save_and_continue_button_text">Save and Continue</string>
    <string name="add_control_no_users_selected_error_message">The field responsible user is required.</string>
    <string name="add_control_no_scope_selected_error_message">The field Scope is requires</string>
    <string name="title_activity_add_control_define_responsible">Add Control: Define Responsible</string>
    <string name="control_define_member_responsible_filter_hint">Filter member</string>
    <string name="control_define_member_responsible_not_found_message">No results</string>
    <string name="control_define_member_responsible_field_is_required_message">A member responsible for the control is required!</string>
    <string name="add_control_define_responsible_save_button_text">Save</string>
    <string name="add_control_define_responsible_confirmation_dialog_title">Confirm member</string>
    <string name="add_control_define_responsible_confirmation_dialog_message">Confirm to make X_USER responsible for Control?</string>
    <string name="title_logout">Logout</string>
    <string name="title_project_list">Project List</string>
    <string name="title_control_section">Controls</string>
    <string name="action_title_add_control">Add Control</string>
    <string name="control_list_empty_string">You have no controls, to add one, click the button "Add Control" at the right top of the screen</string>
    <string name="title_activity_add_test">Add Test</string>
    <string name="add_test_description_hint">Test description</string>
    <string name="add_test_coverage_date_hint">Coverage Date</string>
    <string name="add_test_scheduled_date_hint">Scheduled Date</string>
    <string name="add_test_company_button">Select Company</string>
    <string name="add_test_system_button">Select System</string>
    <string name="add_test_save_button_text">Save</string>
    <string name="add_test_save_and_continue_button_text">Save and Continue</string>
    <string name="add_test_no_users_selected_error_message">The field responsible user is required.</string>
    <string name="add_test_no_companies_selected_error_message">The field company is required.</string>
    <string name="add_test_no_systems_selected_error_message">The field system is required.</string>
    <string name="add_test_status_label">Status: </string>
    <string name="add_test_status_done">Done</string>
    <string name="add_test_status_scheduled">Scheduled</string>
    <string name="add_test_status_on_progress">On progress</string>
    <string name="title_activity_add_edit_or_view_control">Add Control</string>
    <string name="title_section1">Section 1</string>
    <string name="test_list_empty_string">You have no tests, to add one, click the button "Add test" at the right top of the screen</string>
    <string name="title_test_section">Tests</string>
    <string name="test_fragment_add_test_action">Add test</string>
    <string name="test_activity_section_details">Details</string>
    <string name="test_activity_section_company_scope">Company Scope</string>
    <string name="test_activity_section_system_scope">System Scope</string>
    <string name="test_activity_section_member_responsible">Member Responsible</string>
    <string name="test_activity_section_exceptions">Exceptions</string>
    <string name="add_test_details_status_label">Status</string>
    <string name="test_activity_exception_title_hint">Title</string>
    <string name="test_activity_exception_description_hint">Description</string>
    <string name="test_activity_exception_number_of_exceptions_hint">Number of exceptions</string>
    <string name="test_activity_exception_remediation_rationale_hint">Remediation rationale</string>
    <string name="test_activity_exception_is_remediated_radio_button_label">Exception is remediated?</string>
    <string name="test_activity_exception_is_significant_radio_button_label">Exception is significant?</string>
    <string name="test_activity_exception_test_has_exception_radio_button_label">Test has exceptions?</string>
    <string name="test_activity_exception_radio_button_yes_text">Yes</string>
    <string name="test_activity_exception_radio_button_no_text">No</string>
</resources>