<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vieira.rodrigo.itgcmanager.AddTestActivity" >

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_test_progress_bar"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/add_test_form_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/add_test_description"
                android:hint="@string/add_test_description_hint"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:lines="3"
                android:gravity="left|top"
                android:layout_marginBottom="@dimen/add_test_margin_form"
                android:layout_alignRight="@+id/add_test_company_button"
                android:layout_alignEnd="@+id/add_test_company_button" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:hint="@string/add_test_scheduled_date_hint"
                android:id="@+id/add_test_scheduled_date"
                android:layout_below="@+id/add_test_description"
                android:layout_marginBottom="@dimen/add_test_margin_form"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/add_test_company_button"
                android:layout_alignEnd="@+id/add_test_company_button" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/add_test_coverage_date"
                android:hint="@string/add_test_coverage_date_hint"
                android:layout_below="@+id/add_test_scheduled_date"
                android:layout_marginBottom="@dimen/add_test_margin_form"
                android:layout_alignRight="@+id/add_test_company_button"
                android:layout_alignEnd="@+id/add_test_company_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:id="@+id/add_test_status_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/add_test_margin_form"
                android:orientation="horizontal"
                android:layout_below="@+id/add_test_coverage_date">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/add_test_status_label"
                    android:id="@+id/textView" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_test_status_scheduled"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/add_test_status_radio_scheduled" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_test_status_on_progress"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/add_test_status_radio_on_progress"
                    android:layout_gravity="center_horizontal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_test_status_done"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/add_test_status_radio_done"
                    android:layout_gravity="center_horizontal" />
            </RadioGroup>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/add_test_company_list"
                android:background="@android:color/background_dark"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/add_test_system_button"
                android:layout_toStartOf="@+id/add_test_system_button"
                android:layout_below="@+id/add_test_status_radio_group" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_test_company_button"
                android:id="@+id/add_test_company_button"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/add_test_company_list"
                android:layout_toRightOf="@+id/add_test_company_list"
                android:layout_toEndOf="@+id/add_test_company_list"
                android:layout_below="@+id/add_test_status_radio_group" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/add_test_system_list"
                android:layout_marginTop="@dimen/add_test_margin_form"
                android:layout_below="@+id/add_test_company_list"
                android:background="@android:color/background_dark"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/add_test_system_button"
                android:layout_toStartOf="@+id/add_test_system_button" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_test_system_button"
                android:id="@+id/add_test_system_button"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/add_test_system_list"
                android:layout_alignTop="@+id/add_test_system_list" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_test_system_list"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/add_test_margin_form">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_test_save_button_text"
                    android:layout_weight="1"
                    android:id="@+id/add_test_save_button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_test_save_and_continue_button_text"
                    android:layout_weight="1"
                    android:id="@+id/add_test_save_and_continue_button" />
            </LinearLayout>




        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
