<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vieira.rodrigo.itgcmanager.com.vieira.rodrigo.fragments.TestExceptionFragment">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/add_control_margin_form"
        android:id="@+id/test_activity_exception_test_has_exception_radio_group">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_activity_exception_test_has_exception_radio_button_label"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_activity_exception_radio_button_yes_text"
            android:id="@+id/test_activity_exception_test_has_exception_radio_button_yes" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_activity_exception_radio_button_no_text"
            android:id="@+id/test_activity_exception_test_has_exception_radio_button_no"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/test_activity_exception_found_details_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test_activity_exception_test_has_exception_radio_group"
        android:layout_alignRight="@+id/test_activity_exception_test_has_exception_radio_group"
        android:layout_alignEnd="@+id/test_activity_exception_test_has_exception_radio_group"
        android:layout_alignLeft="@+id/test_activity_exception_test_has_exception_radio_group"
        android:layout_alignStart="@+id/test_activity_exception_test_has_exception_radio_group">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test_activity_exception_title"
            android:hint="@string/test_activity_exception_title_hint"
            android:layout_marginBottom="@dimen/add_control_margin_form"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
             />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/test_activity_exception_description"
            android:lines="3"
            android:layout_below="@+id/test_activity_exception_title"
            android:hint="@string/test_activity_exception_description_hint"
            android:layout_alignLeft="@+id/test_activity_exception_title"
            android:layout_alignStart="@+id/test_activity_exception_title"
            android:layout_marginBottom="@dimen/add_control_margin_form"
            android:layout_alignRight="@+id/test_activity_exception_title"
            android:layout_alignEnd="@+id/test_activity_exception_title" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/test_activity_exception_number_of_exceptions"
            android:layout_below="@+id/test_activity_exception_description"
            android:layout_alignLeft="@+id/test_activity_exception_description"
            android:layout_alignStart="@+id/test_activity_exception_description"
            android:hint="@string/test_activity_exception_number_of_exceptions_hint"
            android:layout_alignRight="@+id/test_activity_exception_description"
            android:layout_marginBottom="@dimen/add_control_margin_form"
            android:layout_alignEnd="@+id/test_activity_exception_description" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_activity_exception_number_of_exceptions"
            android:layout_alignLeft="@+id/test_activity_exception_number_of_exceptions"
            android:layout_marginBottom="@dimen/add_control_margin_form"
            android:layout_alignStart="@+id/test_activity_exception_number_of_exceptions"
            android:orientation="horizontal"
            android:id="@+id/test_activity_exception_is_remediated_radio_group">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_activity_exception_is_remediated_radio_button_label"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_activity_exception_radio_button_yes_text"
                android:id="@+id/test_activity_exception_is_remediated_radio_yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_activity_exception_radio_button_no_text"
                android:id="@+id/test_activity_exception_is_remediated_radio_no"
                android:layout_gravity="center_horizontal" />
        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:lines="3"
            android:layout_marginBottom="@dimen/add_control_margin_form"
            android:id="@+id/test_activity_exception_remediation_rationale"
            android:hint="@string/test_activity_exception_remediation_rationale_hint"
            android:layout_below="@+id/test_activity_exception_is_remediated_radio_group"
            android:layout_alignLeft="@+id/test_activity_exception_is_remediated_radio_group"
            android:layout_alignStart="@+id/test_activity_exception_is_remediated_radio_group"
            android:layout_alignRight="@+id/test_activity_exception_is_remediated_radio_group"
            android:layout_alignEnd="@+id/test_activity_exception_is_remediated_radio_group" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_activity_exception_remediation_rationale"
            android:layout_alignLeft="@+id/test_activity_exception_number_of_exceptions"
            android:layout_alignStart="@+id/test_activity_exception_number_of_exceptions"
            android:orientation="horizontal"
            android:id="@+id/test_activity_exception_is_significant_radio_group">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_activity_exception_is_significant_radio_button_label"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_activity_exception_radio_button_yes_text"
                android:id="@+id/test_activity_exception_is_significant_radio_yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_activity_exception_radio_button_no_text"
                android:id="@+id/test_activity_exception_is_significant_radio_no"
                android:layout_gravity="center_horizontal" />
        </RadioGroup>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_test_save_button_text"
        android:id="@+id/test_activity_exception_save_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
