<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="com.vieira.rodrigo.itgcmanager.AddControlActivityStepDefineScope">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_control_define_scope_form_view">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_add_system_scope"
            android:id="@+id/add_control_define_scope_add_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_control_define_scope_list"
            android:layout_below="@+id/add_control_define_scope_add_button"
            android:layout_above="@+id/add_control_define_scope_continue_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_control_define_scope_empty_list_message"
            android:layout_below="@+id/add_control_define_scope_add_button"
            android:layout_centerHorizontal="true"
            android:text="@string/add_control_define_scope_empty_list_message"
            android:gravity="center"
            android:visibility="gone"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_control_save_button_text"
            android:id="@+id/add_control_define_scope_continue_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_control_define_scope_progress_bar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
